--- a/src/app/pages/bets/filter/filter.component.html
+++ b/src/app/pages/bets/filter/filter.component.html
@@ -23,11 +23,11 @@
           <div class="action-buttons">
             <button mat-button (click)="selectAllBookmakers()">
               <mat-icon>done_all</mat-icon>
-              Todos
+              <span class="button-text">Todos</span>
             </button>
             <button mat-button (click)="clearAllBookmakers()">
               <mat-icon>clear</mat-icon>
-              Ninguno
+              <span class="button-text">Ninguno</span>
             </button>
           </div>
         </div>
@@ -67,11 +67,11 @@
           <div class="action-buttons">
             <button mat-button (click)="selectAllSports()">
               <mat-icon>done_all</mat-icon>
-              Todos
+              <span class="button-text">Todos</span>
             </button>
             <button mat-button (click)="clearAllSports()">
               <mat-icon>clear</mat-icon>
-              Ninguno
+              <span class="button-text">Ninguno</span>
             </button>
           </div>
         </div>
