--- a/src/app/pages/bets/surebet.component.scss
+++ b/src/app/pages/bets/surebet.component.scss
@@ -647,7 +647,13 @@ $green: #8CE332;
         overflow: visible;
         min-width: 0;
 
-        @media (max-width: 768px) {
+        @media (min-width: 501px) and (max-width: 768px) {
+          flex-direction: row;
+          gap: 0.5rem;
+          width: 100%;
+        }
+
+        @media (max-width: 500px) {
           flex-direction: column;
           gap: 0.5rem;
           width: 100%;
