--- a/src/app/pages/bets/calculator/calculator.component.html
+++ b/src/app/pages/bets/calculator/calculator.component.html
@@ -82,6 +82,8 @@
       <div class="slider-wrapper">
         <span class="slider-label">Step: ${{ roundingStep | number }}</span>
         <select [(ngModel)]="roundingStep" class="step-select">
+          <option [value]="1000">$1,000</option>
+          <option [value]="2500">$2,500</option>
           <option [value]="5000">$5,000</option>
           <option [value]="10000">$10,000</option>
           <option [value]="20000">$20,000</option>
@@ -101,42 +103,39 @@
   <div class="profit-grid-vertical">
     <div class="profit-card-vertical left">
       <div class="badge-row">
-        <div class="badge-highlight-vertical" *ngIf="winwin.profitUnder !== 0; else emptyHighlight">
-          <mat-icon>arrow_upward</mat-icon>
-          <p class="badge-value">${{ winwin.profitUnder }}</p>
+        <div class="badge-highlight-vertical" 
+             *ngIf="winwin.profitOver !== 0" 
+             [ngClass]="{'profit-positive': winwin.profitOver > 0, 'profit-negative': winwin.profitOver < 0}">
+          <mat-icon>{{ winwin.profitOver > 0 ? 'arrow_upward' : 'arrow_downward' }}</mat-icon>
+          <p class="badge-value">${{ winwin.profitOver }}</p>
         </div>
-        <ng-template #emptyHighlight>
-          <div class="badge-highlight-empty"></div>
-        </ng-template>
         <div class="badge-vertical badge-winwin">
           <p class="badge-label">INVERSION</p>
-          <p class="badge-value">${{ winwin.under }}</p>
+          <p class="badge-value">${{ winwin.over }}</p>
         </div>
       </div>
       <div class="badge-row">
-        <div class="badge-highlight-vertical" *ngIf="maxUnder.profitUnder !== 0; else emptyHighlight2">
-          <mat-icon>arrow_upward</mat-icon>
-          <p class="badge-value">${{ maxUnder.profitUnder }}</p>
+        <div class="badge-highlight-vertical" 
+             *ngIf="maxUnder.profitOver !== 0" 
+             [ngClass]="{'profit-positive': maxUnder.profitOver > 0, 'profit-negative': maxUnder.profitOver < 0}">
+          <mat-icon>{{ maxUnder.profitOver > 0 ? 'arrow_upward' : 'arrow_downward' }}</mat-icon>
+          <p class="badge-value">${{ maxUnder.profitOver }}</p>
         </div>
-        <ng-template #emptyHighlight2>
-          <div class="badge-highlight-empty"></div>
-        </ng-template>
         <div class="badge-vertical badge-maxunder">
           <p class="badge-label">INVERSION</p>
-          <p class="badge-value">${{ maxUnder.under }}</p>
+          <p class="badge-value">${{ maxUnder.over }}</p>
         </div>
       </div>
       <div class="badge-row">
-        <div class="badge-highlight-vertical" *ngIf="maxOver.profitUnder !== 0; else emptyHighlight3">
-          <mat-icon>arrow_upward</mat-icon>
-          <p class="badge-value">${{ maxOver.profitUnder }}</p>
+        <div class="badge-highlight-vertical" 
+             *ngIf="maxOver.profitOver !== 0" 
+             [ngClass]="{'profit-positive': maxOver.profitOver > 0, 'profit-negative': maxOver.profitOver < 0}">
+          <mat-icon>{{ maxOver.profitOver > 0 ? 'arrow_upward' : 'arrow_downward' }}</mat-icon>
+          <p class="badge-value">${{ maxOver.profitOver }}</p>
         </div>
-        <ng-template #emptyHighlight3>
-          <div class="badge-highlight-empty"></div>
-        </ng-template>
         <div class="badge-vertical badge-maxover">
           <p class="badge-label">INVERSION</p>
-          <p class="badge-value">${{ maxOver.under }}</p>
+          <p class="badge-value">${{ maxOver.over }}</p>
         </div>
       </div>
     </div>
@@ -145,19 +144,19 @@
       <div class="badge-row">
         <div class="badge-vertical badge-winwin">
           <p class="badge-label">Win Win</p>
-          <p class="badge-value">${{ winwin.under + winwin.over }}</p>
+          <p class="badge-value">${{ Math.min(winwin.profitOver, winwin.profitUnder).toFixed(1) }}</p>
         </div>
       </div>
       <div class="badge-row">
         <div class="badge-vertical badge-maxunder">
           <p class="badge-label">Max Under</p>
-          <p class="badge-value">${{ maxUnder.under + maxUnder.over }}</p>
+          <p class="badge-value">${{ Math.max(maxUnder.profitOver, maxUnder.profitUnder).toFixed(1) }}</p>
         </div>
       </div>
       <div class="badge-row">
         <div class="badge-vertical badge-maxover">
           <p class="badge-label">Max Over</p>
-          <p class="badge-value">${{ maxOver.under + maxOver.over }}</p>
+          <p class="badge-value">${{ Math.max(maxOver.profitOver, maxOver.profitUnder).toFixed(1) }}</p>
         </div>
       </div>
     </div>
@@ -166,41 +165,38 @@
       <div class="badge-row">
         <div class="badge-vertical badge-winwin">
           <p class="badge-label">INVERSION</p>
-          <p class="badge-value">${{ winwin.over }}</p>
+          <p class="badge-value">${{ winwin.under }}</p>
         </div>
-        <div class="badge-highlight-vertical" *ngIf="winwin.profitOver !== 0; else emptyHighlight4">
-          <mat-icon>arrow_upward</mat-icon>
-          <p class="badge-value">${{ winwin.profitOver }}</p>
+        <div class="badge-highlight-vertical" 
+             *ngIf="winwin.profitUnder !== 0" 
+             [ngClass]="{'profit-positive': winwin.profitUnder > 0, 'profit-negative': winwin.profitUnder < 0}">
+          <mat-icon>{{ winwin.profitUnder > 0 ? 'arrow_upward' : 'arrow_downward' }}</mat-icon>
+          <p class="badge-value">${{ winwin.profitUnder }}</p>
         </div>
-        <ng-template #emptyHighlight4>
-          <div class="badge-highlight-empty"></div>
-        </ng-template>
       </div>
       <div class="badge-row">
         <div class="badge-vertical badge-maxunder">
           <p class="badge-label">INVERSION</p>
-          <p class="badge-value">${{ maxUnder.over }}</p>
+          <p class="badge-value">${{ maxUnder.under }}</p>
         </div>
-        <div class="badge-highlight-vertical" *ngIf="maxUnder.profitOver !== 0; else emptyHighlight5">
-          <mat-icon>arrow_upward</mat-icon>
-          <p class="badge-value">${{ maxUnder.profitOver }}</p>
+        <div class="badge-highlight-vertical" 
+             *ngIf="maxUnder.profitUnder !== 0" 
+             [ngClass]="{'profit-positive': maxUnder.profitUnder > 0, 'profit-negative': maxUnder.profitUnder < 0}">
+          <mat-icon>{{ maxUnder.profitUnder > 0 ? 'arrow_upward' : 'arrow_downward' }}</mat-icon>
+          <p class="badge-value">${{ maxUnder.profitUnder }}</p>
         </div>
-        <ng-template #emptyHighlight5>
-          <div class="badge-highlight-empty"></div>
-        </ng-template>
       </div>
       <div class="badge-row">
         <div class="badge-vertical badge-maxover">
           <p class="badge-label">INVERSION</p>
-          <p class="badge-value">${{ maxOver.over }}</p>
+          <p class="badge-value">${{ maxOver.under }}</p>
         </div>
-        <div class="badge-highlight-vertical" *ngIf="maxOver.profitOver !== 0; else emptyHighlight6">
-          <mat-icon>arrow_upward</mat-icon>
-          <p class="badge-value">${{ maxOver.profitOver }}</p>
+        <div class="badge-highlight-vertical" 
+             *ngIf="maxOver.profitUnder !== 0" 
+             [ngClass]="{'profit-positive': maxOver.profitUnder > 0, 'profit-negative': maxOver.profitUnder < 0}">
+          <mat-icon>{{ maxOver.profitUnder > 0 ? 'arrow_upward' : 'arrow_downward' }}</mat-icon>
+          <p class="badge-value">${{ maxOver.profitUnder }}</p>
         </div>
-        <ng-template #emptyHighlight6>
-          <div class="badge-highlight-empty"></div>
-        </ng-template>
       </div>
     </div>
   </div>
